Updated project with Firebase Auth & with chat page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/drishti-logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>drishti</title>
+   <title>Drishti – The Expert Hub</title>
+  <meta name="description" content="Drishti is a platform that connects users with experts across various fields for personalized advice and consultations." />
+    <meta name="keywords" content="Drishti, expert advice, consultations, professional services, personalized help" />
+    <meta name="author" content="Drishti Team" />
   </head>
   <body>
     <div id="root"></div>
